--- a/index.css
+++ b/index.css
@@ -41,6 +41,7 @@
   margin: 1rem 0 0.5rem;
   font-weight: 700;
 }
+
 #main p {
   font-size: 18px;
   text-align: center;
@@ -52,7 +53,6 @@
   margin-bottom: 1.5rem;
   font-weight: 700;
   color: hsla(0, 0%, 100%, 0.7);
-  font-size: 24px;
 }
 
 #circle {
@@ -148,7 +148,6 @@ button {
   color: hsl(0, 0%, 100%);
   background-color: hsl(224, 30%, 27%);
   font-weight: 700;
-  font-size: 18px;
 }
 
 #footer {
@@ -175,53 +174,61 @@ button {
 
   #container {
     width: 80%;
-    height: 31rem;
+    height: 70vh;
     max-width: 47rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 2rem;
-    box-shadow: 8px 8px 24px 12px hsl(221, 100%, 96%, 0.7);
+    border-radius: 1.5rem;
+    box-shadow: 8px 8px 24px 12px hsl(221, 100%, 96%, 0.9);
   }
 
   #main {
-    border-radius: 2rem;
+    border-radius: 1.5rem;
     margin: 0;
     width: 100%;
     height: 100%;
   }
+
   #main #box {
-    padding: 2rem;
+    padding: 1rem;
     width: 90%;
     height: 100%;
-    justify-content: space-between;
+    justify-content: start;
   }
 
   #main h2 {
-    margin: 2rem 0 1.5rem;
+    margin: 1rem 0;
     font-weight: 700;
-    font-size: 32px;
+  }
+
+  #main p {
+    margin: 0;
+    font-size: 16px;
+  }
+
+  .title {
+    margin-bottom: 1rem;
   }
 
   #circle {
-    width: 12rem;
-    height: 12rem;
-  }
-
-  #circle small {
-    font-size: 18px;
-  }
-
-  #circle h1 {
-    font-weight: 800;
-    font-size: 64px;
+    width: 10rem;
+    height: 10rem;
   }
 
   #aside {
     height: 100%;
     width: 100%;
-    padding: 2rem;
-    border-radius: 0 2rem 2rem 0;
+    padding: 1rem;
+    border-radius: 0 1.5rem 1.5rem 0;
+  }
+  #aside li {
+    margin-bottom: 0.8rem;
+    padding: 0.6rem 1rem;
+  }
+
+  button {
+    padding: 0.8rem 1rem;
   }
 
   #footer {
