--- a/index.css
+++ b/index.css
@@ -149,6 +149,10 @@ button {
   background-color: hsl(224, 30%, 27%);
   font-weight: 700;
 }
+button:hover,
+button:focus {
+  background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
+}
 
 #footer {
   display: block;
