--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@
 }
 
 #main {
-  height: 40vh;
+  height: 40%;
   background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
   border-radius: 0 0 2rem 2rem;
   color: hsl(0, 0%, 100%);
@@ -51,15 +51,16 @@
 
 .title {
   margin-bottom: 1.5rem;
-  font-weight: 700;
+  font-weight: 800;
+  font-size: 24px;
   color: hsla(0, 0%, 100%, 0.7);
 }
 
 #circle {
   background: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
   border-radius: 100%;
-  width: 8rem;
-  height: 8rem;
+  width: 10rem;
+  height: 10rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -68,12 +69,12 @@
 
 #circle h1 {
   font-weight: 800;
-  font-size: 40px;
+  font-size: 48px;
 }
 
 #circle small {
-  /* font-size: 16px; */
-  font-weight: 400;
+  /* font-size: 18px; */
+  font-weight: 700;
   color: hsla(0, 0%, 100%, 0.4);
 }
 
@@ -148,6 +149,7 @@ button {
   color: hsl(0, 0%, 100%);
   background-color: hsl(224, 30%, 27%);
   font-weight: 700;
+  font-size: 18px;
   cursor: pointer;
 }
 button:hover,
@@ -160,14 +162,14 @@ button:focus {
   color: hsl(218, 44%, 22%);
   width: 100%;
   text-align: center;
-  margin: 1rem 0;
+  margin: 2rem 0;
 }
 
 #footer a {
   color: hsl(207, 84%, 45%);
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 720px) {
   /* For desktop: */
 
   #wrapper {
@@ -179,8 +181,9 @@ button:focus {
 
   #container {
     width: 80%;
-    height: 24rem;
-    max-width: 47rem;
+    height: 60%;
+    max-width: 46rem;
+    max-height: 32rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -189,54 +192,61 @@ button:focus {
   }
 
   #main {
-    border-radius: 1.5rem;
+    border-radius: 2rem;
     margin: 0;
     width: 100%;
     height: 100%;
   }
 
   #main #box {
-    padding: 1rem;
-    width: 90%;
+    padding: 2rem;
+    width: 100%;
     height: 100%;
     justify-content: start;
   }
 
   #main h2 {
-    margin: 1rem 0;
+    margin: 1.5rem 0 1rem;
+    font-size: 32px;
     font-weight: 700;
   }
 
   #main p {
     margin: 0;
     font-size: 16px;
-  }
-
-  .title {
-    margin-bottom: 1rem;
+    width: 80%;
   }
 
   #circle {
-    width: 10rem;
-    height: 10rem;
+    margin-top: 0.5rem;
+    width: 14rem;
+    height: 14rem;
+  }
+
+  #circle h1 {
+    font-size: 72px;
+  }
+  #circle small {
+    font-size: 18px;
   }
 
   #aside {
     height: 100%;
     width: 100%;
-    padding: 1rem;
-    border-radius: 0 1.5rem 1.5rem 0;
+    padding: 2rem;
+    border-radius: 0 2rem 2rem 0;
   }
-  #aside li {
-    margin-bottom: 0.8rem;
-    padding: 0.6rem 1rem;
+
+  li {
+    padding: 1.2rem 1rem;
   }
 
   button {
-    padding: 0.8rem 1rem;
+    padding: 1rem;
   }
 
   #footer {
-    margin-top: 3rem;
+    position: absolute;
+    bottom: 10%;
   }
 }
